--- a/package.json
+++ b/package.json
@@ -1,17 +1,20 @@
 {
   "name": "alt-folio",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "license": "MIT",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build --prod",
+    "build": "ng build --prod --base-href='https://j-chimienti.github.io/crypto-portfolio/'",
+    "build:ce": "ng build --prod --output-path chrome-ext",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "postbuild": "cp manifest.json dist"
+    "postbuild:ce": "cp manifest.json chrome-ext",
+    "deploy": "gh-pages -d ./dist",
+    "predeploy": "npm run build"
   },
-  "private": true,
+  "private": false,
   "dependencies": {
     "@angular/animations": "^5.2.0",
     "@angular/common": "^5.2.0",
@@ -22,8 +25,11 @@
     "@angular/platform-browser": "^5.2.0",
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
+    "@types/c3": "^0.6.0",
     "bootswatch": "^4.1.0",
+    "c3": "^0.4.23",
     "core-js": "^2.4.1",
+    "d3": "^4.13.0",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
   },
@@ -35,6 +41,7 @@
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "~6.0.60",
     "codelyzer": "^4.0.1",
+    "elasticsearch": "^15.0.0",
     "jasmine-core": "~2.8.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~2.0.0",
