--- a/package.json
+++ b/package.json
@@ -5,14 +5,15 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build --prod --base-href='https://j-chimienti.github.io/crypto-portfolio/'",
+    "build": "ng build --prod --base-href='https://j-chimienti.github.io/crypto-portfolio/' --output-path dist",
     "build:ce": "ng build --prod --output-path chrome-ext",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
     "postbuild:ce": "cp manifest.json chrome-ext",
     "deploy": "gh-pages -d ./dist",
-    "predeploy": "npm run build"
+    "predeploy": "npm run build",
+    "start:elastic": "ES_PATH_CONF=./elastic elasticsearch"
   },
   "private": false,
   "dependencies": {
@@ -26,10 +27,13 @@
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
     "@types/c3": "^0.6.0",
+    "@types/elasticsearch": "^5.0.23",
     "bootswatch": "^4.1.0",
     "c3": "^0.4.23",
     "core-js": "^2.4.1",
     "d3": "^4.13.0",
+    "jquery": "3.X",
+    "popper.js": "^1.14.3",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
   },
