--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
     "scripts": {
         "ng": "ng",
         "start": "ng serve",
-        "build": "ng build -e prod --base-href='https://j-chimienti.github.io/crypto-portfolio/' --output-path dist",
-        "build:ce": "ng build -e cx --output-path chrome-ext",
-        "build:local": "ng build -e prod --output-path dist",
+        "build": "ng build --prod -e prod --base-href='https://j-chimienti.github.io/crypto-portfolio/' --output-path dist",
+        "build:ce": "ng build --prod -e cx --output-path chrome-ext",
+        "build:local": "ng build --prod -e prod --output-path dist",
         "test": "ng test",
         "lint": "ng lint",
         "e2e": "ng e2e",
@@ -27,11 +27,12 @@
         "@angular/platform-browser-dynamic": "^5.2.0",
         "@angular/router": "^5.2.0",
         "@types/c3": "^0.6.0",
+        "bootstrap": "^4.1.3",
         "bootswatch": "^4.1.0",
         "c3": "^0.4.23",
         "core-js": "^2.4.1",
         "d3": "^4.13.0",
-        "jquery": "3.X",
+        "jquery": "^3.3.1",
         "popper.js": "^1.14.3",
         "rxjs": "^5.5.6",
         "zone.js": "^0.8.19"
