--- a/package.json
+++ b/package.json
@@ -4,10 +4,15 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
+    "build": "ng build --prod -e prod --base-href='https://j-chimienti.github.io/crypto-portfolio/' --output-path dist",
+    "build:ce": "ng build --prod -e cx --output-path chrome-ext",
+    "build:local": "ng build --prod -e prod --output-path dist",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "postbuild:ce": "cp manifest.json chrome-ext",
+    "deploy": "gh-pages -d ./dist",
+    "predeploy": "npm run build"
   },
   "private": true,
   "dependencies": {
@@ -20,7 +25,13 @@
     "@angular/platform-browser": "^6.1.0",
     "@angular/platform-browser-dynamic": "^6.1.0",
     "@angular/router": "^6.1.0",
+    "@ng-bootstrap/ng-bootstrap": "^3.0.0",
+    "bootstrap": "^4.1.3",
+    "bootswatch": "^4.1.3",
+    "c3": "^0.6.7",
     "core-js": "^2.5.4",
+    "crypto-icons": "^1.0.18",
+    "d3": "^5.5.0",
     "rxjs": "^6.0.0",
     "zone.js": "~0.8.26"
   },
