--- a/package.json
+++ b/package.json
@@ -4,17 +4,18 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build --prod -e prod --base-href='https://j-chimienti.github.io/crypto-portfolio/' --output-path dist",
-    "build:ce": "ng build --prod -e cx --output-path chrome-ext",
-    "build:local": "ng build --prod -e prod --output-path dist",
+    "build:gh": "ng build --prod --configuration production --base-href='https://j-chimienti.github.io/crypto-portfolio/' --output-path docs",
+    "build:ce": "ng build --prod --configuration cx --output-path chrome-ext",
+    "build:local": "ng build --prod --configuration production --output-path dist",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
     "postbuild:ce": "cp manifest.json chrome-ext",
-    "deploy": "gh-pages -d ./dist",
-    "predeploy": "npm run build"
+    "postbuild:gh": "cp docs/index.html docs/404.html",
+    "deploy": "gh-pages -d ./docs",
+    "predeploy": "npm run build:gh"
   },
-  "private": true,
+  "private": false,
   "dependencies": {
     "@angular/animations": "^6.1.0",
     "@angular/common": "^6.1.0",
@@ -25,13 +26,14 @@
     "@angular/platform-browser": "^6.1.0",
     "@angular/platform-browser-dynamic": "^6.1.0",
     "@angular/router": "^6.1.0",
-    "@ng-bootstrap/ng-bootstrap": "^3.0.0",
     "bootstrap": "^4.1.3",
     "bootswatch": "^4.1.3",
     "c3": "^0.6.7",
     "core-js": "^2.5.4",
     "crypto-icons": "^1.0.18",
     "d3": "^5.5.0",
+    "jquery": "^3.3.1",
+    "popper.js": "^1.14.4",
     "rxjs": "^6.0.0",
     "zone.js": "~0.8.26"
   },
