--- a/package.json
+++ b/package.json
@@ -1,20 +1,28 @@
 {
   "name": "crypto-portfolio",
-  "version": "0.0.0",
+  "version": "0.1.0",
+  "main": "main.js",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build:gh": "ng build --prod --configuration production --base-href='https://j-chimienti.github.io/crypto-portfolio/' --output-path docs",
+    "build": "ng build",
+    "build:all": "npm run deploy && npm run build:ce && npm run build:os",
+    "prebuild:os": "npm run build:prod && rm -rf ./crypto-portfolio-darwin-x64",
+    "build:os": "electron-packager . --platform=darwin",
+    "build:exe": "electron-packager . --platform=win32",
+    "build:prod": "ng build --prod --output-path dist",
+    "build:gh": "ng build --prod --configuration production --base-href='https://j-chimienti.github.io/crypto-portfolio/' --output-path dist",
+    "postbuild:gh": "cp dist/index.html dist/404.html",
     "build:ce": "ng build --configuration cx --output-path chrome-ext",
-    "build:local": "ng build --prod --configuration production --output-path dist",
+    "postbuild:ce": "cp manifest.json chrome-ext",
+    "build:local": "ng build --prod --configuration production --output-path docs",
     "test": "ng test",
     "lint": "ng lint",
+    "preapp": "npm run build:prod",
+    "app": "electron .",
     "e2e": "ng e2e",
-    "postbuild:ce": "cp manifest.json chrome-ext",
-    "postbuild:gh": "cp docs/index.html docs/404.html",
-    "deploy": "gh-pages -d ./docs",
     "predeploy": "npm run build:gh",
-    "build:all": "npm run deploy && npm run build:ce"
+    "deploy": "gh-pages -d ./dist"
   },
   "private": false,
   "dependencies": {
@@ -27,6 +35,7 @@
     "@angular/platform-browser": "^6.1.0",
     "@angular/platform-browser-dynamic": "^6.1.0",
     "@angular/router": "^6.1.0",
+    "@swimlane/ngx-datatable": "^13.1.0",
     "bootstrap": "^4.1.3",
     "bootswatch": "^4.1.3",
     "c3": "^0.6.7",
@@ -47,6 +56,8 @@
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
     "codelyzer": "~4.2.1",
+    "electron": "^3.0.0",
+    "electron-packager": "^12.1.2",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~1.7.1",
