--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "start": "ng serve",
     "build": "ng build",
     "build:all": "npm run deploy && npm run build:ce && npm run build:os",
-    "prebuild:os": "npm run build:prod && rm -rf ./crypto-portfolio-darwin-x64",
-    "build:os": "electron-packager . --platform=darwin",
+    "prebuild:os": "npm run build:prod",
+    "build:os": "electron-packager . --platform=darwin --overwrite",
     "build:exe": "electron-packager . --platform=win32",
     "build:prod": "ng build --prod --output-path dist",
     "build:gh": "ng build --prod --configuration production --base-href='https://j-chimienti.github.io/crypto-portfolio/' --output-path dist",
@@ -36,6 +36,7 @@
     "@angular/platform-browser-dynamic": "^6.1.0",
     "@angular/router": "^6.1.0",
     "@swimlane/ngx-datatable": "^13.1.0",
+    "bignumber.js": "^7.2.1",
     "bootstrap": "^4.1.3",
     "bootswatch": "^4.1.3",
     "c3": "^0.6.7",
